MODINVSTOR-1099: Disable Authority APIs and related implementations (#923)